--- a/css/default.css
+++ b/css/default.css
@@ -88,10 +88,12 @@ pre ol{margin-left:25px;list-style-type:decimal;}
     background-image:url(http://sealhuang.github.io/images/001.JPG);
 }
 .opinion .aside{
-    background-image:url(https://dnqgz544uhbo8.cloudfront.net/_/fp/img/bestof/june-2013.CaUUbO2jIECgCmldhmxCCA.jpg);
+    /*background-image:url(https://dnqgz544uhbo8.cloudfront.net/_/fp/img/bestof/june-2013.CaUUbO2jIECgCmldhmxCCA.jpg);*/
+    background-image:url(http://sealhuang.github.io/images/002.JPG);
 }
 .project .aside{
-    background-image:url('https://d233eq3e3p3cv0.cloudfront.net/max/1000/0*kTUZamBulGQZg1MW.jpeg')
+    /*background-image:url('https://d233eq3e3p3cv0.cloudfront.net/max/1000/0*kTUZamBulGQZg1MW.jpeg')*/
+    background-image:url(http://sealhuang.github.io/images/003.JPG);
 }
 .index-content .section { margin-left:30%; padding-top:80px; padding-right:15%; ;}
 
