--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -40,9 +40,9 @@ layout: default
         {% endfor %}
         </ul>
         
-        <h2>Project</h2>
+        <h2>Theory</h2>
         <ul class="artical-list">
-        {% for post in site.categories.project%}
+        {% for post in site.categories.pro%}
             <li><a href="{{ post.url }}">{{ post.title }}</a></li>
         {% endfor %}
         </ul>
